2003-07-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03937] <center> in <table>
	* table.c (feed_table_tag): fix <center>,</center>,<div>,</div>,
				<p>,<br>,<nobr>,</nobr>,<wbr>
			check_rowcol() for <img>

2003-07-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3mimg/fb/fb_img.h (get_image_size): add missing prototypes
	* w3mimg/fb/fb.c (fb_clear): unused variable `j'

2003-07-09  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03935] Re: clear image
	* w3mimg/fb/fb.c (fb_get_packed_color): added
		(fb_image_pset): use fb_get_packed_color
		(fb_image_fill): use fb_get_packed_color
		(fb_clear): use tmp to store pixels

2003-07-09  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03934] Re: clear image
	* w3mimg/x11/x11_w3mimg.c (x11_clear): s/FALSE/False/

2003-07-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03931] Re: clear image
	* w3mimgdisplay.c (ClearImage): offset
	* w3mimg/fb/fb.c (fb_clear): memcpy by pixel_size

2003-07-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03929] clear image
	* image.c (syncImage): added
		(drawImage): rewrite using syncImage()
		(clearImage): use clear image command (6)
	* w3mimgdisplay.c: change protocol
		2 => terminate drawing
		6 => clear image
		(main): '2' calls TermImage()
			'6' calls ClearImage()
			TermImage() when exit
		(TermImage): renamed from ClearImage
		(ClearImage): rewritten to call w_op->clear()
	* w3mimg.h/w3mimg.h (w3mimg_op): add clear()
	* w3mimg/fb/fb.c (fb_clear): added
	* w3mimg/fb/fb.h (fb_clear): added
	* w3mimg/fb/fb_img.c (fb_image_clear): added
	* w3mimg/fb/fb_w3mimg.c (w3mfb_clear): added
		(w3mimg_fbopen): initialize wop->clear
	* w3mimg/x11/x11_w3mimg.c (x11_clear): added
		(w3mimg_x11open): initialize wop->clear

2003-07-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03927] deflate
	* file.c (compression_decoder): .deflate for application/x-deflate's
				extension

2003-06-19  Fumitoshi UKAI  <ukai@debian.or.jp>
